# home_assignment_0

./: .test.env  Makefile  README.md  docker-compose.yaml  example_settings.yaml  pyproject.toml
.github/workflows/: ci-checks.yaml
src/monitor/: main.py  monitor.py
src/monitor/serializers/: __init__.py  monitoring_result.py  settings.py
src/monitor/utils/: __init__.py  logger.py
src/monitor/worker/: __init__.py  db_worker.py  website_worker.py  worker.py
src/tests/: test_db_worker.py  test_serializers.py  test_website_worker.py  test_worker.py
