[project]
name = "monitor"
description = "Websites availability monitor"
version = "0.1.0"
authors = [
    { name = "Viktor Vorobev", email = "vikeyer@gmail.com" }
]
readme = "README.md"

dependencies = [
    "pydantic>=2.4.2",
]

requires-python = ">=3.11"

[project.scripts]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.4",
    "pylint-quotes>=0.2.3",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pyyaml>=6.0.1",
    "types_PyYAML>=6.0.12",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
